examples/test/testpolicy759.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy759
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key33: value26
      key22: value22
      key17: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value18
          key17: value23
          key48: value4
      podSelector:
        matchLabels:
          key4: value46
